* Fix - Prevent duplicate stripe meta data on orders caused by processing redirect payments and webhooks simultaneously.
* Fix - Processing a refund of a non-card payments (i.e. iDeal, giropay) through the Stripe dashboard was not showing as refunded in WooCommerce for stores with UPE enabled.
* Tweak - Improve performance with handling redirect payments by not constructing every payment gateways on each page load.

= 8.2.0 - 2024-04-11 =
* Tweak - Improve the display of the Stripe account ID in the settings page.
* Add - Enable custom styling of the Payment Elements for stores using the updated checkout experience.
* Fix - Alipay icon not being displayed on the Block checkout page.
* Fix - Ensure the hold stock setting does not cancel pending stripe orders that are still waiting for customer action (eg confirm 3DS or complete payment redirect).
* Fix - Prevent checkout errors when customers with one-word names process payment using Apple Pay or Google Pay.
* Tweak - Remove the functionality for saving the customized statement descriptors.
* Tweak - Remove unused WC_Stripe_Old_Settings_UPE_Toggle_Controller class and related scripts.
* Update - Save the Stripe default appearance settings in a transient instead of the browsers local storage.
* Tweak - Update Link by Stripe branding assets.

= 8.1.1 - 2024-04-04 =
* Fix - Do not hide PRB on cart and product page when there are required custom checkout fields.
* Fix - Issue with subscription renewal when the `start_date` of the mandate is set in the past.

= 8.1.0 - 2024-03-28 =
* Add - Include Stripe account details to the settings page.
* Add - Include Stripe API version in logs.
* Add - Enable the updated checkout experience (UPE) by default for new accounts.
* Add - Banner encouraging the transition to the updated checkout experience.
* Fix - Hiding the refund button and replacing it with a disabled "Refunding unavailable" button when the order is not captured.