@@ -565,11 +565,27 @@ abstract class WC_Stripe_Payment_Gateway extends WC_Payment_Gateway_CC {
 			}
 
 			if ( 'succeeded' === $response->status ) {
-				$order->payment_complete( $response->id );
+				/**
+				 * If the response has a succeeded status but also has a risk/fraud outcome that requires manual review, don't mark the order as
+				 * processing/completed. This will be handled by the incoming review.open webhook.
+				 *
+				 * Depending on when Stripe sends their events and how quickly it is processed by the store, the review.open webhook (which marks orders as on-hold)
+				 * can be processed before or after the payment_intent.success webhook. This difference can lead to orders being incorrectly marked as processing/completed
+				 * in WooCommerce, but flagged for manual renewal in Stripe.
+				 *
+				 * If the review.open webhook was processed before the payment_intent.success, set the processing/completed status in `_stripe_status_before_hold`
+				 * to ensure the review.closed event handler will update the status to the proper status.
+				 */
+				if ( 'manual_review' === $this->get_risk_outcome( $response ) ) {
+					$this->set_stripe_order_status_before_hold( $order, 'default_payment_complete' );
+					$order->set_transaction_id( $response->id ); // Save the transaction ID to link the order to the Stripe charge ID. This is to fix reviews that result in refund.
+				} else {
+					$order->payment_complete( $response->id );
 
-				/* translators: transaction id */
-				$message = sprintf( __( 'Stripe charge complete (Charge ID: %s)', 'woocommerce-gateway-stripe' ), $response->id );
-				$order->add_order_note( $message );
+					/* translators: transaction id */
+					$message = sprintf( __( 'Stripe charge complete (Charge ID: %s)', 'woocommerce-gateway-stripe' ), $response->id );
+					$order->add_order_note( $message );
+				}
 			}
 
 			if ( 'failed' === $response->status ) {
@@ -2088,5 +2104,63 @@ abstract class WC_Stripe_Payment_Gateway extends WC_Payment_Gateway_CC {
 	 */
 	private function needs_ssl_setup() {
 		return ! $this->testmode && ! is_ssl();
+	}
+
+	/**
+	 * Helper method to retrieve the status of the order before it was put on hold.
+	 *
+	 * @since 8.3.0
+	 *
+	 * @param WC_Order $order The order.
+	 *
+	 * @return string The status of the order before it was put on hold.
+	 */
+	protected function get_stripe_order_status_before_hold( $order ) {
+		$before_hold_status = $order->get_meta( '_stripe_status_before_hold' );
+
+		if ( ! empty( $before_hold_status ) ) {
+			return $before_hold_status;
+		}
+
+		$default_before_hold_status = $order->needs_processing() ? 'processing' : 'completed';
+		return apply_filters( 'woocommerce_payment_complete_order_status', $default_before_hold_status, $order->get_id(), $order );
+	}
+
+	/**
+	 * Stores the status of the order before being put on hold in metadata.
+	 *
+	 * @since 8.3.0
+	 *
+	 * @param WC_Order  $order  The order.
+	 * @param string    $status The order status to store. Accepts 'default_payment_complete' which will fetch the default status for payment complete orders.
+	 *
+	 * @return void
+	 */
+	protected function set_stripe_order_status_before_hold( $order, $status ) {
+		if ( 'default_payment_complete' === $status ) {
+			$payment_complete_status = $order->needs_processing() ? 'processing' : 'completed';
+			$status                  = apply_filters( 'woocommerce_payment_complete_order_status', $payment_complete_status, $order->get_id(), $order );
+		}
+
+		$order->update_meta_data( '_stripe_status_before_hold', $status );
+	}
+
+	/**
+	 * Retrieves the risk/fraud outcome from the webhook payload.
+	 *
+	 * @param object $event_data The event data from the webhook.
+	 *
+	 * @return string The fraud type.
+	 */
+	protected function get_risk_outcome( $event_data ) {
+		$fraud_type = '';
+
+		if ( isset( $event_data->data->object->outcome->type ) ) { // Gets thCharge.succeeded event.
+			$fraud_type = $event_data->data->object->outcome->type;
+		} elseif ( isset( $event_data->outcome->type ) ) { // Payment_intent.succeeded event.
+			$fraud_type = $event_data->outcome->type;
+		}
+
+		return $fraud_type;
 	}
 }
